--- a/package.json
+++ b/package.json
@@ -4,14 +4,23 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "build-css": "node-sass --include-path scss scss/style.scss css/estilos.css",
-  "watch-css": "nodemon -e scss -x \"npm run build-css\""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build-css": "node-sass --include-path scss scss/style.scss css/estilos.css",
+    "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "node-sass": "^6.0.1",
     "nodemon": "^2.0.12"
-  }
+  },
+  "dependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jmrmdq/proyectoCoderHouse.git"
+  },
+  "bugs": {
+    "url": "https://github.com/jmrmdq/proyectoCoderHouse/issues"
+  },
+  "homepage": "https://github.com/jmrmdq/proyectoCoderHouse#readme"
 }
